--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 <p style="text-align:center"><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:72px"><a href="mailto:minasargious@gmail.com?subject=Live%2C%20don't%20die%2C%20for%20god.&amp;body=Hi%2C%20Mr.%20Sargious!%0A%0AYou%20are%20worthy.%20You%20are%20valued.%0A%0AI%20love%20you.%20But%20do%20you%20know%20who%20I%20love%20more%3F%0A%0AGod.%0A%0AYours%20in-kind%2C%0AHopefully">msargiou@uci.edu</a></span></span></p>
 
-<p style="text-align:center"><span style="font-size:26px">0 &bull;&nbsp;<a href="http://bi-polardisorder.com" target="_blank">1</a> / <a href="http://www.angels.monster">2</a> / <a href="http://www.kanyewest.uk">3</a>&nbsp;/ <a href="http://www.isaacnewton.uk">4</a> / <a href="http://www.sigmundfreud.uk">5</a> / <a href="http://marthabernays.com">6</a> /&nbsp;</span><span style="font-size:26px"><a href="http://www.ihateyou.uk">7</a> &bull;&nbsp;</span>&infin;</p>
+<p style="text-align:center"><span style="font-size:26px">0 &bull;&nbsp;<a href="http://bi-polardisorder.com" target="_blank">1</a> / <a href="http://www.angels.monster"target="_blank">2</a> / <a href="http://www.kanyewest.uk"target="_blank">3</a>&nbsp;/ <a href="http://www.isaacnewton.uk"target="_blank">4</a> / <a href="http://www.sigmundfreud.uk"target="_blank">5</a> / <a href="http://marthabernays.com"target="_blank">6</a> /&nbsp;</span><span style="font-size:26px"><a href="http://www.ihateyou.uk"target="_blank">7</a> &bull;&nbsp;</span>&infin;</p>
 
 <p style="text-align:center">Project A: Official Document | Property of Owners (Los Angeles County, California)</p>
 
