--- a/index.html
+++ b/index.html
@@ -72,7 +72,118 @@
 <p style="text-align:center"><span style="font-family:Arial, Helvetica, sans-serif"><span style="font-size:72px">Mina Sargious &#39;12</span></span></p>
 
 <p style="text-align:center"><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:72px"><a href="mailto:minasargious@gmail.com?subject=Live%2C%20don't%20die%2C%20for%20god.&amp;body=Hi%2C%20Mr.%20Sargious!%0A%0AYou%20are%20worthy.%20You%20are%20valued.%0A%0AI%20love%20you.%20But%20do%20you%20know%20who%20I%20love%20more%3F%0A%0AGod.%0A%0AYours%20in-kind%2C%0AHopefully">msargiou@uci.edu</a></span></span></p>
+<div data-oembed-url="https://www.youtube.com/watch?v=HxI2TxhhS9A">
+<div>
+<div style="height:0; left:0; padding-bottom:75%; position:relative; width:100%"><iframe allow="accelerometer *; clipboard-write *; encrypted-media *; gyroscope *; picture-in-picture *; web-share *;" allowfullscreen="" scrolling="no" src="//if-cdn.com/1qxCd5H" style="top: 0; left: 0; width: 100%; height: 100%; position: absolute; border: 0;" tabindex="-1"></iframe></div>
+</div>
+</div>
 
+<div data-oembed-url="https://youtu.be/mIaoeWnVMWQ?si=Py88wCWrSWRzg6K9&amp;t=949">
+<div>
+<div style="height:0; left:0; padding-bottom:56.25%; position:relative; width:100%"><iframe allow="accelerometer *; clipboard-write *; encrypted-media *; gyroscope *; picture-in-picture *; web-share *;" allowfullscreen="" scrolling="no" src="//if-cdn.com/S9ushWI" style="top: 0; left: 0; width: 100%; height: 100%; position: absolute; border: 0;" tabindex="-1"></iframe></div>
+</div>
+</div>
+
+<div data-oembed-url="https://www.youtube.com/watch?v=UWp18Xprvfw">
+<div>
+<div style="height:0; left:0; padding-bottom:56.25%; position:relative; width:100%"><iframe allow="accelerometer *; clipboard-write *; encrypted-media *; gyroscope *; picture-in-picture *; web-share *;" allowfullscreen="" scrolling="no" src="//if-cdn.com/gOiNDAk" style="top: 0; left: 0; width: 100%; height: 100%; position: absolute; border: 0;" tabindex="-1"></iframe></div>
+</div>
+</div>
+
+<p style="text-align:center"><span style="font-size:72px">🙄</span></p>
+
+<p style="text-align:center"><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:72px">Happiness?</span></span></p>
+
+<p style="text-align:center">&nbsp;</p>
+
+<p style="text-align:center"><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:72px">where can you find it</span></span></p>
+
+<p style="text-align:center">&nbsp;</p>
+
+<p style="text-align:center"><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:72px">within</span></span></p>
+
+<p style="text-align:center">&nbsp;</p>
+
+<p style="text-align:center"><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:72px">really?</span></span></p>
+
+<p style="text-align:center">&nbsp;</p>
+
+<p style="text-align:center"><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:72px">no, it&#39;s Without</span></span></p>
+
+<p style="text-align:center"><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:72px">It&#39;s in God.</span></span></p>
+
+<p style="text-align:center"><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:72px">Do you Who That Is?</span></span></p>
+
+<p style="text-align:center">&nbsp;</p>
+
+<p style="text-align:center"><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:72px">the pie in the sky, dream? you, a dreaming soul?</span></span></p>
+
+<p style="text-align:center">&nbsp;</p>
+
+<p style="text-align:center"><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:72px">not really, not quite. try to look further,</span></span></p>
+
+<p style="text-align:center">&nbsp;</p>
+
+<p style="text-align:center"><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:72px">You are not God.</span></span></p>
+
+<p style="text-align:center">&nbsp;</p>
+
+<p style="text-align:center"><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:72px">God is not you.</span></span></p>
+
+<p style="text-align:center">&nbsp;</p>
+
+<p style="text-align:center"><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:72px">Nor is it me, text, words, letters, punctuation marks.</span></span></p>
+
+<p style="text-align:center">&nbsp;</p>
+
+<p style="text-align:center"><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:72px">GOD is that which cannot die,</span></span></p>
+
+<p style="text-align:center"><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:72px">which is the possibility to hope.</span></span></p>
+
+<p style="text-align:center">&nbsp;</p>
+
+<p style="text-align:center"><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:72px">Mina Sargious &#39;12</span></span></p>
+
+<p style="text-align:center"><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:72px"><a href="mailto:minasargious@gmail.com?subject=Live%2C%20don't%20die%2C%20for%20god.&amp;body=Hi%2C%20Mr.%20Sargious!%0A%0AYou%20are%20worthy.%20You%20are%20valued.%0A%0AI%20love%20you.%20But%20do%20you%20know%20who%20I%20love%20more%3F%0A%0AGod.%0A%0AYours%20in-kind%2C%0AHopefully">msargiou@uci.edu</a></span></span></p>
+
+<p style="text-align:center"><span style="font-size:26px">0 </span></p>
+
+<p style="text-align:center"><span style="font-size:26px">\&bull;/</span></p>
+
+<p style="text-align:center"><span style="font-size:26px">&nbsp;<a href="https://bi-polardisorder.com">1</a> </span></p>
+
+<p style="text-align:center"><span style="font-size:26px"><a href="https://www.angels.monster">2</a></span></p>
+
+<p style="text-align:center"><span style="font-size:26px"><a href="https://www.kanyewest.uk">3</a></span></p>
+
+<p style="text-align:center"><span style="font-size:26px"><a href="https://www.isaacnewton.uk">4</a></span></p>
+
+<p style="text-align:center"><span style="font-size:26px"><a href="https://www.sigmundfreud.uk">5</a></span></p>
+
+<p style="text-align:center"><span style="font-size:26px"><a href="http://www.marthabernays.com">6</a>&nbsp;</span></p>
+
+<p style="text-align:center"><span style="font-size:26px"><a href="https://www.ihateyou.uk">7</a> </span></p>
+<p style="text-align:center"><span style="font-size:26px"><a href="https://www.hyperreligiosity.com">8</a>
+
+<p style="text-align:center"><span style="font-size:26px">&bull;</span></p>
+
+<p style="text-align:center"><span style="font-size:72px">&nbsp;&infin;</span></p>
+
+<p style="text-align:center">Project A: Official Document, Property of Owners (Los Angeles County, California)</p>
+
+<div data-oembed-url="https://www.youtube.com/watch?v=XN9cKFa1dGM">
+<div>
+<div style="height:0; left:0; padding-bottom:56.25%; position:relative; width:100%"><iframe allow="accelerometer *; clipboard-write *; encrypted-media *; gyroscope *; picture-in-picture *; web-share *;" allowfullscreen="" scrolling="no" src="//if-cdn.com/fUjgC22" style="top: 0; left: 0; width: 100%; height: 100%; position: absolute; border: 0;" tabindex="-1"></iframe></div>
+</div>
+</div>
+
+<div data-oembed-url="https://vimeo.com/191665133">
+<div>
+<div style="height:0; left:0; padding-bottom:55.625%; position:relative; width:100%"><iframe allow="encrypted-media *;" allowfullscreen="" scrolling="no" src="//if-cdn.com/9mI7bEc" style="top: 0; left: 0; width: 100%; height: 100%; position: absolute; border: 0;" tabindex="-1"></iframe></div>
+</div>
+</div>
+
+<p>&nbsp;</p>
 <p style="text-align:center"><span style="font-size:26px">0 &bull;&nbsp;<a href="http://bi-polardisorder.com" target="_blank">1</a> / <a href="http://www.angels.monster"target="_blank">2</a> / <a href="http://www.kanyewest.uk"target="_blank">3</a>&nbsp;/ <a href="http://www.isaacnewton.uk"target="_blank">4</a> / <a href="http://www.sigmundfreud.uk"target="_blank">5</a> / <a href="http://marthabernays.com"target="_blank">6</a> /&nbsp;</span><span style="font-size:26px"><a href="http://www.ihateyou.uk"target="_blank">7</a> &bull;&nbsp;</span>&infin;</p>
 
 <p style="text-align:center">Project A: Official Document | Property of Owners (Los Angeles County, California)</p>
