--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
 <p style="text-align:center"><span style="font-size:72px">&nbsp;&infin;</span></p>
 
-<p style="text-align:center">Project A: Official Document, Property of Owners (Los Angeles County, California)</p>
+<p style="text-align:center">Project A: Official Document | Property of Owners (Los Angeles County, California)</p>
 
 <div data-oembed-url="https://www.youtube.com/watch?v=XN9cKFa1dGM">
 <div>
