--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <br>
 <br>
 <h2>•<a href="https://www.angels.monster/john-mayer-disbelief">God's power isn't as gross as you are, it is quite the opposite</h2>
-<br><br><h2><a href="https://www.angels.monster/evil-dies-and-is-so-stupid">God's not tricky, but invented those Tricks. and so just use the dang search bar, love everyone, be kindest, be honest! Be Kinder! Love all, and don't make Nazi salutes, plz.</a></h2>
+<br><br><h2>•<a href="https://www.angels.monster/evil-dies-and-is-so-stupid">God's not tricky, but invented those Tricks. and so just use the dang search bar, love everyone, be kindest, be honest! Be Kinder! Love all, and don't make Nazi salutes, plz.</a></h2>
 <br>
 <br>
 <h2></h2>
