--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<a href="http://www.anti-arab.com/"><h1>have fun at hating others, it's more fun loving, and forgiveness is eternal, for those capable of it, but don't be hoodwinked. (don't make others look crazy, abuse for fun, mock the concept of love, and don't be weird. some people simply abuse for fun, just lying outright; claiming i'm al jazeera correspondent; wtf, stop lying. be cool. be smart, and love intelligence and freedom. USA! USA! USA! E-A-R-T-H. this isn't a weird person, don't be weird (and always be cautious and kind, there.)</h1></a><br><br>
+
 <h2>•<a href="https://www.angels.monster/the-realism-of-truths-not-half-truths">I do not abuse others, but UCI does, and they don't like people, so they hurt, folks who speak up about ANYTHING. God's Benevelonce; You are scary, not a fairy-godmother, a psychopath, a narcissist, someone who should kindly help others, not hurt innocence, Scary.</a></h1>
 
 
