--- a/index.html
+++ b/index.html
@@ -1,3 +1,20 @@
+<div data-oembed-url="https://www.youtube.com/watch?v=CGk6dyBsbKg">
+<div>
+<div style="height:0; left:0; padding-bottom:56.25%; position:relative; width:100%"><iframe allow="accelerometer *; clipboard-write *; encrypted-media *; gyroscope *; picture-in-picture *; web-share *;" allowfullscreen="" scrolling="no" src="//if-cdn.com/wdwfD62" style="top: 0; left: 0; width: 100%; height: 100%; position: absolute; border: 0;" tabindex="-1"></iframe></div>
+</div>
+</div>
+
+<h1><span style="font-family:Georgia,serif"><a href="https://youtu.be/Y6qcerjTqDY?si=8PFCTMUX3DLDpNny&amp;t=315">God knows the Irvine 7-Eleven weren&#39;t Buddah-Lovas, Christian Samsonites, nor Israeli Failed Soccer Star Mochi Haim, nor Agnostic Christie, Ten Little Niggers, author, so um idgaf, taylor swift smokes weed with jay-z in chi-city</a></span></h1>
+
+<p>&nbsp;</p>
+
+<h1><span style="font-family:Georgia,serif">Gross! And I don&#39;t think that people really care, but they do, but sometimes abusers trick you, so tricky they are; just be cool, and i guess find a solution, that emotionality will provide. People who hate other people shouldn&#39;t, and do hate yourself if you harm, as I&#39;ve learned that harmful sorts encourage each other; just love, bro, and love your sisters forever, and your brothers, and your mothers and fathers, both extensions of your spiritual ones, take love and spread it, just not your legs, nor your masculinity, cuz shit&#39;s nasty sometimes, lol, life&#39;s cool, enjoy it, and stay safe, and please abuse no one, not yourself, only your self to become stronger women and men and creative geniuses, against those who take advantage of you. You are advantaged, and so am I, but ability differs, and you&#39;re different, everyone, and I love that about you: it&#39;s a good look, and you&#39;re individually beautiful, so please respect each other, unlike what you might mistake as respect (cowardice and disdain, brainwashing, and gaslighting, and stay Godly, like M.I.A. when she fucked up the superbowl and fights that misogyny and patriarchy, and fucks shit up for real, really! Don&#39;t hurt people for fun, funny guys</span></h1>
+
+<div data-oembed-url="https://www.youtube.com/watch?v=0BOJsoHKEXc">
+<div>
+<div style="height:0; left:0; padding-bottom:56.25%; position:relative; width:100%"><iframe allow="accelerometer *; clipboard-write *; encrypted-media *; gyroscope *; picture-in-picture *; web-share *;" allowfullscreen="" scrolling="no" src="//if-cdn.com/ZerPZer" style="top: 0; left: 0; width: 100%; height: 100%; position: absolute; border: 0;" tabindex="-1"></iframe></div>
+</div>
+</div>
 <a href="http://www.anti-arab.com/"><h1>have fun at hating others, it's more fun loving, and forgiveness is eternal, for those capable of it, but don't be hoodwinked. (don't make others look crazy, abuse for fun, mock the concept of love, and don't be weird. some people simply abuse for fun, just lying outright; claiming i'm al jazeera correspondent; wtf, stop lying. be cool. be smart, and love intelligence and freedom. USA! USA! USA! E-A-R-T-H. this isn't a weird person, don't be weird (and always be cautious and kind, there.)</h1></a><br><br>
 
 <h2>•<a href="https://www.angels.monster/the-realism-of-truths-not-half-truths">I do not abuse others, but UCI does, and they don't like people, so they hurt, folks who speak up about ANYTHING. God's Benevelonce; You are scary, not a fairy-godmother, a psychopath, a narcissist, someone who should kindly help others, not hurt innocence, Scary.</a></h1>
@@ -120,5 +137,25 @@
 <div style="height:0; left:0; padding-bottom:55.625%; position:relative; width:100%"><iframe allow="encrypted-media *;" allowfullscreen="" scrolling="no" src="//if-cdn.com/9mI7bEc" style="top: 0; left: 0; width: 100%; height: 100%; position: absolute; border: 0;" tabindex="-1"></iframe></div>
 </div>
 </div>
+
+
+
+<p style="text-align:center"><a href="https://www.youtube.com/watch?v=uiuk0z8dzXo" target="_blank"><img alt="" src="https://ckeditor.com/apps/ckfinder/userfiles/files/fantasia_barrino_with_kanye_west_uc_irvine_bren_events_center_is_open_but_closed-hearted.png" style="height:499px; width:500px" /></a></p>
+
+<p>&nbsp;</p>
+
+<p>&nbsp;</p>
+
+<p>&nbsp;</p>
+
+<div data-oembed-url="https://www.youtube.com/watch?v=W4SOEkmjlBg">
+<div>
+<div style="height:0; left:0; padding-bottom:56.25%; position:relative; width:100%"><iframe allow="accelerometer *; clipboard-write *; encrypted-media *; gyroscope *; picture-in-picture *; web-share *;" allowfullscreen="" scrolling="no" src="//if-cdn.com/1YWc1oh" style="top: 0; left: 0; width: 100%; height: 100%; position: absolute; border: 0;" tabindex="-1"></iframe></div>
+</div>
+</div>
+
+<p>&nbsp;</p>
+
+<p>&nbsp;</p>
 
 <p>&nbsp;</p>
