--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <br>
 <br>
-<h2>•<a href="https://www.angels.monster/art-is-too-good">Godliness</a></h1>
+<h2>•<a href="https://www.bi-polardisorder.com/art-is-too-good">Godliness</a></h1>
 <br>
 <br>
 <h2>•<a href="https://www.angels.monster/john-mayer-disbelief">God's power isn't as gross as you are, it is quite the opposite</h2>
@@ -30,9 +30,9 @@
 <br>
 <br>
 <h2></h2>
-<div data-oembed-url="https://www.youtube.com/watch?v=HxI2TxhhS9A">
+<div data-oembed-url="https://www.youtube.com/watch?v=FtGN2wK9g_s">
 <div>
-<div style="height:0; left:0; padding-bottom:75%; position:relative; width:100%"><iframe allow="accelerometer *; clipboard-write *; encrypted-media *; gyroscope *; picture-in-picture *; web-share *;" allowfullscreen="" scrolling="no" src="//if-cdn.com/1qxCd5H" style="top: 0; left: 0; width: 100%; height: 100%; position: absolute; border: 0;" tabindex="-1"></iframe></div>
+<div style="height:0; left:0; padding-bottom:75%; position:relative; width:100%"><iframe allow="accelerometer *; clipboard-write *; encrypted-media *; gyroscope *; picture-in-picture *; web-share *;" allowfullscreen="" scrolling="no" src="//if-cdn.com/fJMpMm4" style="top: 0; left: 0; width: 100%; height: 100%; position: absolute; border: 0;" tabindex="-1"></iframe></div>
 </div>
 </div>
 <div data-oembed-url="https://www.youtube.com/watch?v=QSNexmC5JWg">
