--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <div style="height:0; left:0; padding-bottom:56.25%; position:relative; width:100%"><iframe allow="accelerometer *; clipboard-write *; encrypted-media *; gyroscope *; picture-in-picture *; web-share *;" allowfullscreen="" scrolling="no" src="//if-cdn.com/ZerPZer" style="top: 0; left: 0; width: 100%; height: 100%; position: absolute; border: 0;" tabindex="-1"></iframe></div>
 </div>
 </div>
-<a href="http://www.anti-arab.com/"><h1>have fun at hating others, it's more fun loving, and forgiveness is eternal, for those capable of it, but don't be hoodwinked. (don't make others look crazy, abuse for fun, mock the concept of love, and don't be weird. some people simply abuse for fun, just lying outright; claiming i'm al jazeera correspondent; wtf, stop lying. be cool. be smart, and love intelligence and freedom. USA! USA! USA! E-A-R-T-H. this isn't a weird person, don't be weird (and always be cautious and kind, there.)</h1></a><br><br>
+<a href="http://www.anti-arab.com/"><h1>have so much, do many things is it fun at hating others, not so much, preachy is better than witchy, it's more fun loving, and forgiveness is eternal, for those capable of it, but don't be hoodwinked. (don't make others look crazy, abuse for fun, mock the concept of love, and don't be weird. some people simply abuse for fun, just lying outright; claiming i'm al jazeera correspondent; wtf, stop lying. be cool. be smart, and love intelligence and freedom. USA! USA! USA! E-A-R-T-H. this isn't a weird person, don't be weird (and always be cautious and kind, there.)</h1></a><br><br>
 
 <h2>•<a href="https://www.angels.monster/the-realism-of-truths-not-half-truths">I do not abuse others, but UCI does, and they don't like people, so they hurt, folks who speak up about ANYTHING. God's Benevelonce; You are scary, not a fairy-godmother, a psychopath, a narcissist, someone who should kindly help others, not hurt innocence, Scary.</a></h1>
 
@@ -153,8 +153,19 @@
 <div style="height:0; left:0; padding-bottom:56.25%; position:relative; width:100%"><iframe allow="accelerometer *; clipboard-write *; encrypted-media *; gyroscope *; picture-in-picture *; web-share *;" allowfullscreen="" scrolling="no" src="//if-cdn.com/1YWc1oh" style="top: 0; left: 0; width: 100%; height: 100%; position: absolute; border: 0;" tabindex="-1"></iframe></div>
 </div>
 </div>
+<p style="text-align:center"><a href="https://www.amazon.com/Power-Beyond-Reason-Collapse-Johnson/dp/1569802432" target="_blank"><img alt="" src="https://ckeditor.com/apps/ckfinder/userfiles/files/mlk%20jr.jpeg" style="height:765px; width:587px" /></a></p>
 
-<p>&nbsp;</p>
+<div data-oembed-url="https://www.youtube.com/watch?v=E2t9J4YBI_0">
+<div>
+<div style="height:0; left:0; padding-bottom:56.25%; position:relative; width:100%"><iframe allow="accelerometer *; clipboard-write *; encrypted-media *; gyroscope *; picture-in-picture *; web-share *;" allowfullscreen="" scrolling="no" src="//if-cdn.com/dBMcRZg" style="top: 0; left: 0; width: 100%; height: 100%; position: absolute; border: 0;" tabindex="-1"></iframe></div>
+</div>
+</div>
+
+<div data-oembed-url="https://www.youtube.com/watch?v=Z8SPwT3nQZ8">
+<div>
+<div style="height:0; left:0; padding-bottom:56.25%; position:relative; width:100%"><iframe allow="accelerometer *; clipboard-write *; encrypted-media *; gyroscope *; picture-in-picture *; web-share *;" allowfullscreen="" scrolling="no" src="//if-cdn.com/lSmU6GA" style="top: 0; left: 0; width: 100%; height: 100%; position: absolute; border: 0;" tabindex="-1"></iframe></div>
+</div>
+</div>
 
 <p>&nbsp;</p>
 
