--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<p style="text-align:center"><img alt="" src="https://i.ibb.co/QnZY6fG/Mina-Sargious-UC-Irvine-Alumnus.jpg" style="height:480px; width:640px" /></p>
+
 <div data-oembed-url="https://www.youtube.com/watch?v=CGk6dyBsbKg">
 <div>
 <div style="height:0; left:0; padding-bottom:56.25%; position:relative; width:100%"><iframe allow="accelerometer *; clipboard-write *; encrypted-media *; gyroscope *; picture-in-picture *; web-share *;" allowfullscreen="" scrolling="no" src="//if-cdn.com/wdwfD62" style="top: 0; left: 0; width: 100%; height: 100%; position: absolute; border: 0;" tabindex="-1"></iframe></div>
