--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <div style="height:0; left:0; padding-bottom:56.25%; position:relative; width:100%"><iframe allow="accelerometer *; clipboard-write *; encrypted-media *; gyroscope *; picture-in-picture *; web-share *;" allowfullscreen="" scrolling="no" src="//if-cdn.com/wdwfD62" style="top: 0; left: 0; width: 100%; height: 100%; position: absolute; border: 0;" tabindex="-1"></iframe></div>
 </div>
 </div>
-<a href="https://www.findagrave.com/memorial/68540366/lolo-soetoro"><img src="https://images.findagrave.com/photos250/photos/2023/222/68540366_4783375f-863c-4b26-81a4-2af24b62d070.jpeg"></a>
+<a href="https://www.findagrave.com/memorial/68540366/lolo-soetoro"><img src="https://images.findagrave.com/photos250/photos/2023/222/68540366_4783375f-863c-4b26-81a4-2af24b62d070.jpeg"></a><a href="https://www.findagrave.com/memorial/68540366/lolo-soetoro"><img src="https://images.findagrave.com/photos250/photos/2023/222/68540366_4783375f-863c-4b26-81a4-2af24b62d070.jpeg"></a><a href="https://www.findagrave.com/memorial/68540366/lolo-soetoro"><img src="https://images.findagrave.com/photos250/photos/2023/222/68540366_4783375f-863c-4b26-81a4-2af24b62d070.jpeg"></a>
   <br><br>
   
 <h1><a href="http://www.rodneykingjr.com">Visit campus police to discuss theories of evolutionary psychology and nonviolence, please?</h1></a>
